traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:8: error: '=' expected but '(' found.
  def positionFinale:Boolean() = {
                            ^TraversalByColumn:14: error: illegal start of simple expression
  def avancer() {
^TraversalByColumn:24: error: ';' expected but 'else' found.
      else if(y == hauteur)
      ^